# soldevwalle

./: .gitignore  README.md  build.sh  package-lock.json  package.json  tsconfig.json
chrome/: asset-manifest.json  background.js  index.html
chrome/static/css/: main.4323dbca.css  main.4323dbca.css.map
chrome/static/js/: 787.js.map  background.js  background.js.map  content.js  content.js.map  main.js  main.js.map
chrome/static/wasm/: wasm_mod.js  wasm_mod_bg.wasm
chrome/static/wasm/snippets/wasm_mod-bc4ca452742d1bb1/src/: progress.js
extension/: manifest.json  manifest_cr.json  manifest_ff.json
extension/js/: background.js  background.ts  background_copy.js  offscreen.ts  popup.html  popup.js  worker.html  worker.js  worker.js.bak
extension/js/wasm/: wasm_mod.js  wasm_mod_bg.wasm
extension/js/wasm/snippets/sqlite-wasm-rs-77a2229985ea0c4a/src/jswasm/: sqlite3-opfs-async-proxy.js  sqlite3.js
extension/js/wasm/snippets/wasm_mod-bc4ca452742d1bb1/src/: progress.js
extension_react_example/: .eslintrc.json  README.md  config-overrides.js  package-lock.json  package.json  tsconfig.json
extension_react_example/public/: background.js  manifest.json  offscreen.html  offscreen.js
extension_react_example/public/wasm/: wasm_mod.js  wasm_mod_bg.wasm
extension_react_example/public/wasm/snippets/wasm_mod-bc4ca452742d1bb1/src/: progress.js
extension_react_example/src/: index.css
extension_react_example/src/content/: index.ts
extension_react_example/src/popup/: index.tsx
extension_react_example/src/popup/App/: App.tsx
extension_react_example/src/popup/Components/: AccountDropdown.tsx  NetworkDropdown.tsx  Searchbar.tsx
extension_react_example/src/popup/Components/Navbar/: Navbar.tsx
extension_react_example/src/popup/Pages/: HomePage.tsx  ReceiveTokens.tsx  SendConfirmation.tsx  SendTokens.tsx  SignInPage.tsx  SignUpPage.tsx  TransactionHistory.tsx  WalletPage.tsx
extension_react_example/src/popup/Routes/: Router.tsx
extension_react_example/src/utils/wasm/: wasm_mod.js  wasm_mod_bg.wasm
wasm_mod/: Cargo.toml
wasm_mod/.cargo/: config.toml
wasm_mod/src/: client.rs  constants.rs  db.rs  lib.rs  models.rs
wasm_mod/src/client/: crypto_manager.rs
