[package]
name = "wasm_mod"
version = "0.1.0"
edition = "2021"
authors = ["dmgorsky <dmgorsky@gmail.com>"]
description = "soldevwallet - Solana Dev Wallet Ext"
license = "GPL 3.0"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
urlencoding = "2.1"

# rand only works for WASM if JS support is enabled in a dependency
# See https://docs.rs/getrandom/latest/getrandom/#webassembly-support
rand = "0.9"
getrandom = { version = "0.2", features = ["js"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#wee_alloc = { version = "0.4.5", optional = true }
wasm_client_solana = { version = "0.7.5", features = ["js"] }
solana-sdk = "2.1.13"
spl-token = "7.0"
anyhow = "1.0"
#deli = { version = "0.2.0", features = ["derive"] }
idb = "0.6.4"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console", "WorkerGlobalScope", "Window", "Headers", "Request", "RequestInit", "RequestMode",
    "Response", "FileSystem", "Navigator", "StorageManager", "Storage", "FileSystemDirectoryHandle", "FileSystemFileHandle",
    "FileSystemWritableFileStream", "IdbFactory", "IdbDatabase", "IdbObjectStore", "IdbTransaction",
    "IdbRequest", "IdbOpenDbRequest", "IdbCursor", "IdbCursorWithValue",
    "IdbKeyRange", ]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = 3
opt-level = 's'
lto = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Required for sqlite-web
split-linked-modules = true
